[package]
name = "dmabuf-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
futures = "0.3.30"
libc = "0.2.153"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "b9f3e89" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", rev = "b9f3e89" }
winit = "0.30.0"
wlx-capture = { git = "https://github.com/galister/wlx-capture", tag = "v0.3.12", features = [
  "pipewire",
], default-features = false }
